miniCSharp/compiler.miniCSharp.com/compiler/miniCSharp/com/miniCsharpParser.java
// Generated from C:\Users\erikson\Desktop\MiniCSharp\miniCSharp\compiler.miniCSharp.com\compiler\miniCSharp\com\miniCsharp.g4 by ANTLR 4.1
package compiler.miniCSharp.com;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class miniCsharpParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, READ=2, WRITE=3, IF=4, ELSE=5, CHAR=6, B=7, NUMF=8, NUMI=9, VAR=10, 
		SOMA=11, SUB=12, DIV=13, MULT=14, REST=15, E=16, OU=17, CHA=18, CHF=19, 
		PAA=20, PAF=21, EDL=22, EQL=23, EQLEQL=24, DIF=25, MAI=26, MEN=27, MENEQL=28, 
		MAIEQL=29, NEG=30, ACR=31, DEC=32, ACRMORE=33, DECMORE=34, SEP=35, CARACTER=36, 
		TEXTO=37, WS=38, COMMENT=39, COMMENTBLOCK=40;
	public static final String[] tokenNames = {
		"<INVALID>", "'Main'", "'read'", "'write'", "'if'", "'else'", "'char'", 
		"B", "NUMF", "NUMI", "VAR", "'+'", "'-'", "'/'", "'*'", "'%'", "'&&'", 
		"'||'", "'{'", "'}'", "'('", "')'", "';'", "'='", "'=='", "'!='", "'>'", 
		"'<'", "'<='", "'>='", "'!'", "'++'", "'--'", "'+='", "'-='", "','", "CARACTER", 
		"TEXTO", "WS", "COMMENT", "COMMENTBLOCK"
	};
	public static final int
		RULE_mcSHARP = 0, RULE_codigo = 1, RULE_cmd = 2, RULE_ler = 3, RULE_escrever = 4, 
		RULE_cf = 5, RULE_atr = 6, RULE_operacao = 7, RULE_operacaoAux = 8, RULE_operadores = 9, 
		RULE_cond = 10, RULE_comp = 11, RULE_opComp = 12, RULE_num = 13;
	public static final String[] ruleNames = {
		"mcSHARP", "codigo", "cmd", "ler", "escrever", "cf", "atr", "operacao", 
		"operacaoAux", "operadores", "cond", "comp", "opComp", "num"
	};

	@Override
	public String getGrammarFileName() { return "miniCsharp.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public miniCsharpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class McSHARPContext extends ParserRuleContext {
		public CodigoContext codigo() {
			return getRuleContext(CodigoContext.class,0);
		}
		public TerminalNode MAIN() { return getToken(miniCsharpParser.MAIN, 0); }
		public McSHARPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mcSHARP; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterMcSHARP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitMcSHARP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitMcSHARP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final McSHARPContext mcSHARP() throws RecognitionException {
		McSHARPContext _localctx = new McSHARPContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mcSHARP);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28); match(MAIN);
			setState(29); match(PAA);
			setState(30); match(PAF);
			setState(31); match(CHA);
			setState(32); codigo();
			setState(33); match(CHF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodigoContext extends ParserRuleContext {
		public CodigoContext codigo() {
			return getRuleContext(CodigoContext.class,0);
		}
		public CfContext cf() {
			return getRuleContext(CfContext.class,0);
		}
		public CmdContext cmd() {
			return getRuleContext(CmdContext.class,0);
		}
		public CodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codigo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterCodigo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitCodigo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitCodigo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodigoContext codigo() throws RecognitionException {
		CodigoContext _localctx = new CodigoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_codigo);
		try {
			setState(46);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(35); cmd();
				setState(36); match(EDL);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(38); cmd();
				setState(39); match(EDL);
				setState(40); codigo();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(42); cf();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(43); cf();
				setState(44); codigo();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public LerContext ler() {
			return getRuleContext(LerContext.class,0);
		}
		public EscreverContext escrever() {
			return getRuleContext(EscreverContext.class,0);
		}
		public AtrContext atr() {
			return getRuleContext(AtrContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitCmd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitCmd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cmd);
		try {
			setState(51);
			switch (_input.LA(1)) {
			case READ:
				enterOuterAlt(_localctx, 1);
				{
				setState(48); ler();
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 2);
				{
				setState(49); escrever();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(50); atr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LerContext extends ParserRuleContext {
		public NumContext n;
		public Token t;
		public Token v;
		public TerminalNode VAR() { return getToken(miniCsharpParser.VAR, 0); }
		public TerminalNode READ() { return getToken(miniCsharpParser.READ, 0); }
		public TerminalNode TEXTO() { return getToken(miniCsharpParser.TEXTO, 0); }
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public LerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ler; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterLer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitLer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitLer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LerContext ler() throws RecognitionException {
		LerContext _localctx = new LerContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ler);
		try {
			setState(79);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(53); match(READ);
				setState(54); match(PAA);
				setState(55); ((LerContext)_localctx).n = num();
				setState(56); match(PAF);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(58); match(READ);
				setState(59); match(PAA);
				setState(60); ((LerContext)_localctx).t = match(TEXTO);
				setState(61); match(PAF);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(62); match(READ);
				setState(63); match(PAA);
				setState(64); match(VAR);
				setState(65); match(PAF);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(66); match(READ);
				setState(67); match(PAA);
				setState(68); ((LerContext)_localctx).t = match(TEXTO);
				setState(69); match(SEP);
				setState(70); ((LerContext)_localctx).v = match(VAR);
				setState(71); match(PAF);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(72); match(READ);
				setState(73); match(PAA);
				setState(74); ((LerContext)_localctx).t = match(TEXTO);
				setState(75); match(SEP);
				setState(76); ((LerContext)_localctx).n = num();
				setState(77); match(PAF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EscreverContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(miniCsharpParser.VAR, 0); }
		public TerminalNode WRITE() { return getToken(miniCsharpParser.WRITE, 0); }
		public TerminalNode TEXTO() { return getToken(miniCsharpParser.TEXTO, 0); }
		public EscreverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escrever; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterEscrever(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitEscrever(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitEscrever(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EscreverContext escrever() throws RecognitionException {
		EscreverContext _localctx = new EscreverContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_escrever);
		try {
			setState(89);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81); match(WRITE);
				setState(82); match(PAA);
				setState(83); match(VAR);
				setState(84); match(PAF);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85); match(WRITE);
				setState(86); match(PAA);
				setState(87); match(TEXTO);
				setState(88); match(PAF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CfContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(miniCsharpParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(miniCsharpParser.IF, 0); }
		public CodigoContext codigo(int i) {
			return getRuleContext(CodigoContext.class,i);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public List<CodigoContext> codigo() {
			return getRuleContexts(CodigoContext.class);
		}
		public CfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterCf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitCf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitCf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CfContext cf() throws RecognitionException {
		CfContext _localctx = new CfContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cf);
		try {
			setState(111);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91); match(IF);
				setState(92); match(PAA);
				setState(93); cond();
				setState(94); match(PAF);
				setState(95); match(CHA);
				setState(96); codigo();
				setState(97); match(CHF);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99); match(IF);
				setState(100); match(PAA);
				setState(101); cond();
				setState(102); match(PAF);
				setState(103); match(CHA);
				setState(104); codigo();
				setState(105); match(CHF);
				setState(106); match(ELSE);
				setState(107); match(CHA);
				setState(108); codigo();
				setState(109); match(CHF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtrContext extends ParserRuleContext {
		public Token v;
		public OperacaoContext op;
		public Token b;
		public Token t;
		public Token c;
		public TerminalNode VAR() { return getToken(miniCsharpParser.VAR, 0); }
		public TerminalNode CARACTER() { return getToken(miniCsharpParser.CARACTER, 0); }
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public TerminalNode TEXTO() { return getToken(miniCsharpParser.TEXTO, 0); }
		public TerminalNode B() { return getToken(miniCsharpParser.B, 0); }
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public AtrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterAtr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitAtr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitAtr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtrContext atr() throws RecognitionException {
		AtrContext _localctx = new AtrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atr);
		try {
			setState(128);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113); ((AtrContext)_localctx).v = match(VAR);
				setState(114); match(EQL);
				setState(115); ((AtrContext)_localctx).op = operacao();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116); ((AtrContext)_localctx).v = match(VAR);
				setState(117); match(EQL);
				setState(118); ((AtrContext)_localctx).b = match(B);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(119); ((AtrContext)_localctx).v = match(VAR);
				setState(120); match(EQL);
				setState(121); ((AtrContext)_localctx).t = match(TEXTO);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(122); ((AtrContext)_localctx).v = match(VAR);
				setState(123); match(EQL);
				setState(124); ((AtrContext)_localctx).c = match(CARACTER);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(125); match(VAR);
				setState(126); match(EQL);
				setState(127); num();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacaoContext extends ParserRuleContext {
		public OperacaoAuxContext op1;
		public OperacaoAuxContext op2;
		public OperacaoContext opr;
		public OperacaoAuxContext operacaoAux() {
			return getRuleContext(OperacaoAuxContext.class,0);
		}
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public OperacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterOperacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitOperacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitOperacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperacaoContext operacao() throws RecognitionException {
		OperacaoContext _localctx = new OperacaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_operacao);
		try {
			setState(134);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130); ((OperacaoContext)_localctx).op1 = operacaoAux();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131); ((OperacaoContext)_localctx).op2 = operacaoAux();
				setState(132); ((OperacaoContext)_localctx).opr = operacao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacaoAuxContext extends ParserRuleContext {
		public Token v1;
		public OperadoresContext op;
		public Token v2;
		public NumContext n1;
		public NumContext n2;
		public List<TerminalNode> VAR() { return getTokens(miniCsharpParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(miniCsharpParser.VAR, i);
		}
		public OperadoresContext operadores() {
			return getRuleContext(OperadoresContext.class,0);
		}
		public List<NumContext> num() {
			return getRuleContexts(NumContext.class);
		}
		public NumContext num(int i) {
			return getRuleContext(NumContext.class,i);
		}
		public OperacaoAuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacaoAux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterOperacaoAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitOperacaoAux(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitOperacaoAux(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperacaoAuxContext operacaoAux() throws RecognitionException {
		OperacaoAuxContext _localctx = new OperacaoAuxContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_operacaoAux);
		try {
			setState(148);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136); ((OperacaoAuxContext)_localctx).v1 = match(VAR);
				setState(137); ((OperacaoAuxContext)_localctx).op = operadores();
				setState(138); ((OperacaoAuxContext)_localctx).v2 = match(VAR);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140); ((OperacaoAuxContext)_localctx).n1 = num();
				setState(141); ((OperacaoAuxContext)_localctx).op = operadores();
				setState(142); ((OperacaoAuxContext)_localctx).v2 = match(VAR);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(144); ((OperacaoAuxContext)_localctx).n1 = num();
				setState(145); ((OperacaoAuxContext)_localctx).op = operadores();
				setState(146); ((OperacaoAuxContext)_localctx).n2 = num();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperadoresContext extends ParserRuleContext {
		public Token o1;
		public Token o2;
		public Token o3;
		public Token o4;
		public Token o5;
		public OperadoresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operadores; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterOperadores(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitOperadores(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitOperadores(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperadoresContext operadores() throws RecognitionException {
		OperadoresContext _localctx = new OperadoresContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_operadores);
		try {
			setState(155);
			switch (_input.LA(1)) {
			case SOMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(150); ((OperadoresContext)_localctx).o1 = match(SOMA);
				}
				break;
			case MULT:
				enterOuterAlt(_localctx, 2);
				{
				setState(151); ((OperadoresContext)_localctx).o2 = match(MULT);
				}
				break;
			case DIV:
				enterOuterAlt(_localctx, 3);
				{
				setState(152); ((OperadoresContext)_localctx).o3 = match(DIV);
				}
				break;
			case SUB:
				enterOuterAlt(_localctx, 4);
				{
				setState(153); ((OperadoresContext)_localctx).o4 = match(SUB);
				}
				break;
			case REST:
				enterOuterAlt(_localctx, 5);
				{
				setState(154); ((OperadoresContext)_localctx).o5 = match(REST);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(miniCsharpParser.VAR, 0); }
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public OpCompContext opComp() {
			return getRuleContext(OpCompContext.class,0);
		}
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		CondContext _localctx = new CondContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cond);
		try {
			setState(175);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(157); comp();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(158); comp();
				setState(159); opComp();
				setState(160); cond();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(162); match(PAA);
				setState(163); comp();
				setState(164); match(PAF);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(166); match(PAA);
				setState(167); comp();
				setState(168); match(PAF);
				setState(169); opComp();
				setState(170); cond();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(172); match(NEG);
				setState(173); comp();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(174); match(VAR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompContext extends ParserRuleContext {
		public Boolean valor;
		public List<TerminalNode> VAR() { return getTokens(miniCsharpParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(miniCsharpParser.VAR, i);
		}
		public OpCompContext opComp() {
			return getRuleContext(OpCompContext.class,0);
		}
		public List<NumContext> num() {
			return getRuleContexts(NumContext.class);
		}
		public NumContext num(int i) {
			return getRuleContext(NumContext.class,i);
		}
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).enterComp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCsharpListener ) ((miniCsharpListener)listener).exitComp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniCsharpVisitor ) return ((miniCsharpVisitor<? extends T>)visitor).visitComp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_comp);
		try {
			setState(193);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(177); match(VAR);
				setState(178); opComp();
				setState(179); match(VAR);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(181); match(VAR);
				setState(182); opComp();
				setState(183); num();
				}
				break;
